# maindo

./: .gitignore  README.md  maindo.c  maindo.nimble  meson.build  music.md  tables.c
docs/: idea.md  todos.md
src/: gateways.nim  maindo.nim  maindo_context.nim  markdown.nim  sql.nim  suit.nim  tables.c  tables.h  templates.nim  urls.nim  views.nim
src/clay/: clay.c
src/domain/: notes.nim  projects.nim  statuses.nim  tasks.nim
src/gateways/: db_tables.nim  gateways.nim
src/gateways/mutations/: mutations.nim  notes.nim  projects.nim  statuses.nim  tasks.nim
src/gateways/queries/: notes.nim  projects.nim  queries.nim  tasks.nim
src/gateways/sql/: initial_data.sql  tables.sql
src/lib/: constructors.nim
src/templates/: index.nimja
src/ui/: card.nim  new_project_view.nim  note_dialog.nim  project_view.nim
tests/: test_markdown.nim  test_tables.nim
ui/: maindo_gui.c  maindo_script.c  theme.h
